--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ build: off  # будем использовать свой скрипт сбор
 install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   - chmod +x gradlew
-  - java -jar ./artifacts/app-card-delivery.jar &
+  - java -jar ./artifacts/ibank.jar &
 
 build_script:
   - ./gradlew test --info "-Dselenide.headless=true"  # запускаем тест, флаг --info позволяет выводить больше информации
